--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/tanwer/ios_test/xmobile.ipa</string>
+					<string>https://120.132.9.213/ios/xmobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
