--- a/manifest.plist
+++ b/manifest.plist
@@ -11,25 +11,25 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://193.112.122.177/ios/xmobile.ipa</string>
+					<string>https://test.gzhuoling.com/ios/xmobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://193.112.122.177/ios/icon.png</string>
+					<string>https://test.gzhuoling.com/ios/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://193.112.122.177/ios/icon.png</string>
+					<string>https://test.gzhuoling.com/ios/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.ruiyu.xmobile</string>
+				<string>com.xmob.xmobile</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
