--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ios/xmobile.ipa</string>
+					<string>https://test.gzhuoling.com/ipa/xmobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ios/icon.png</string>
+					<string>https://test.gzhuoling.com/ipa/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ios/icon.png</string>
+					<string>https://test.gzhuoling.com/ipa/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
