--- a/manifest.plist
+++ b/manifest.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ipa/icon_72.png</string>
+					<string>https://xhqy.xyzcore.com/ipa/Icon-24@2x.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ipa/icon_256.png</string>
+					<string>https://xhqy.xyzcore.com/ipa/Icon-98@2x.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
