--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://test.gzhuoling.com/ipa/xmobile.ipa</string>
+					<string>https://xhqy.xyzcore.com/ipa/xmobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
